--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -34,6 +34,9 @@ pre {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+.a-group a {
+    margin: 0 5px;
+}
 
 /**wrapper - start*/
 .view-wrapper {
