--- a/src/style/base.css
+++ b/src/style/base.css
@@ -37,10 +37,6 @@ pre {
   white-space: nowrap;
 }
 
-.a-group a {
-  margin: 0 5px;
-}
-
 /**wrapper - start*/
 .view-wrapper {
   height: 100vh;
@@ -188,6 +184,15 @@ pre {
   to {
     opacity: 1;
   }
+}
+
+.a-group a {
+  margin: 0 5px;
+}
+
+.go-back {
+  margin-bottom: 10px;
+  font-size: 16px;
 }
 
 /**wrapper - end*/
