--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -34,9 +34,6 @@ pre {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.a-group a {
-    margin: 0 5px;
-}
 
 /**wrapper - start*/
 .view-wrapper {
@@ -174,5 +171,12 @@ pre {
     to {
         opacity: 1;
     }
+}
+.a-group a {
+    margin: 0 5px;
+}
+.go-back {
+    margin-bottom: 10px;
+    font-size: 16px;
 }
 /**wrapper - end*/
